home/styles.css
body {
    background-color: black; /* Dark mode background */
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
    font-family: Arial, sans-serif;
}

.logo {
    transition: all 0.2s;
    max-width: 200px;
    margin-bottom: 20px;
}

.logo:hover {
    size: 120%;

    
}

h1 {
    -webkit-text-stroke-color: #f6ba02;
    margin-bottom: 20px;
}

.link-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #333;
    padding: 20px;
    border: solid;
    border-radius: 10px;
    border-color: #f6ba02;
    margin-bottom: 20px;
    width: 300px;
}

.link-container h2 {
    -webkit-text-stroke-color: #f6ba02;
    margin: 0 0 10px 0;
}

.link-container p {
    -webkit-text-stroke-color: #f6ba02;
    margin: 0 0 20px 0;
}

.link-container button {
    transition: all 0.2s ;
    background-color: #444;
    color: white;
    border: solid;
    border-color: #555;
    padding: 10px;
    border-radius: 5px;
    cursor: pointer;
    width: 100%;
    background-image: url('imgs/openbutton.png');
    background-size: contain;
    background-repeat: no-repeat; 
    background-position: center; 
}

.link-container button:hover {
    background-color: #555;
    border-color: #444;
    width: 108%;
    height: 107.5%;
    border-radius: 5px;
}

.redirect {
    color:#f6ba02;
    

}

